--- a/public/button.html
+++ b/public/button.html
@@ -48,7 +48,7 @@
 
       <div class="border-2 border-dashed border-gray-200 rounded-lg bg-white cypress-wrapper">
         <button class="bg-blue-700 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded">
-          Button10
+          Button
         </button>
       </div>
 
