chore: button test2

--- a/public/button.html
+++ b/public/button.html
@@ -70,7 +70,7 @@
 
       <div class="border-2 border-dashed border-gray-200 rounded-lg bg-white cypress-wrapper">
         <button class="bg-transparent hover:bg-blue-900 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
-          New button label!
+          New button label2
         </button>
       </div>
 
