--- a/public/button.html
+++ b/public/button.html
@@ -48,7 +48,7 @@
 
       <div class="border-2 border-dashed border-gray-200 rounded-lg bg-white cypress-wrapper">
         <button class="bg-blue-700 hover:bg-blue-900 text-white font-bold py-2 px-4 rounded">
-          Button
+          New label 8
         </button>
       </div>
 
@@ -70,7 +70,7 @@
 
       <div class="border-2 border-dashed border-gray-200 rounded-lg bg-white cypress-wrapper">
         <button class="bg-transparent hover:bg-blue-900 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded">
-          Button
+          New button
         </button>
       </div>
 
